--- a/data/Map.Rmd
+++ b/data/Map.Rmd
@@ -34,14 +34,14 @@ library(htmlwidgets)
 
 
 ```{r}
-locations <- read.csv("./Kaffeehäuser.csv")
-
-locations <- locations %>% 
-   tidygeocoder::geocode(address = address, method = 'osm', 
-          full_results = TRUE, custom_query= list(extratags = 1))
-
-locations_filtered <- locations %>%
-  select(identifier, address, lat, long)
+# locations <- read.csv("./Kaffeehäuser.csv")
+# 
+# locations <- locations %>% 
+#    tidygeocoder::geocode(address = address, method = 'osm', 
+#           full_results = TRUE, custom_query= list(extratags = 1))
+# 
+# locations_filtered <- locations %>%
+#   select(identifier, address, lat, long)
 
 #write.csv(locations_filtered, "Kaffeehäuser_latlong.csv")
 ```
